<resources>
    <string name="app_name">Calculator</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="num1">Enter Number One</string>
    <string name="num2">Enter Number Two</string>
    <string name="hint1">e.g. 4</string>
    <string name="hint2">e.g. 6</string>
    <string name="result">Result</string>
    <string name="back">Back</string>
</resources>
